Added search movie and edit existing file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 <nav>
   <a routerLink="/dashboard">Movie Dashboard</a>
   <a routerLink="/movies">Movie List</a>
-  <a routerLink="//movies-table">Movies By Countries</a>
+  <a routerLink="/movies-table">Movies By Countries</a>
   <a routerLink="/movies">Admin</a>
+  <a routerLink="/search-movie">SearchMovies</a>
 </nav>
 
 
