--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,21 @@
-/* DashboardComponent's private CSS styles */
+nav a {
+  padding: 1rem;
+  text-decoration: none;
+  margin-top: 20px;
+  display: inline-block;
+  background-color: #e8e8e8;
+  color: #3d3d3d;
+  border-radius: 4px;
+}
+
+  nav a:hover {
+    color: white;
+    background-color: #42545C;
+  }
+
+  nav a:active {
+    background-color: black;
+  }
 
 h2 {
   text-align: center;
@@ -40,4 +57,20 @@ a {
 
 a:hover {
   background-color: #000;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+th, td {
+  text-align: left;
+  padding: 16px;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
